--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
         <img src="Screenshots/3.png" alt="Изображение 3">
 	<h2>whois</h2>
 	<img src="Screenshots/4.png" alt="Изображение 4">
+	<h2>SFTP</h2>
+	<img src="Screenshots/5.png" alt="Изображение 5">
     </div>
 </body>
 </html>
