--- a/task-2/index.html
+++ b/task-2/index.html
@@ -36,7 +36,7 @@
         <h2>GET HTTP 1.1</h2>
 	<img src="screenshots/2.png" alt="Изображение 2">
 	<h2>Размер файа file.tar.gz</h2>
-        <img src="Screenshots/3.png" alt="Изображение 3">
+        <img src="screenshots/3.png" alt="Изображение 3">
 	<h2>Медиатип image.png</h2>
 	<img src="screenshots/4.png" alt="Изображение 4">
     </div>
