--- a/task-2/index.html
+++ b/task-2/index.html
@@ -39,6 +39,12 @@
         <img src="screenshots/3.png" alt="Изображение 3">
 	<h2>Медиатип image.png</h2>
 	<img src="screenshots/4.png" alt="Изображение 4">
+	<h2>5 задание</h2>
+	<img src="screenshots/5.png" alt="Изображение 5">
+	<h2>6 задание</h2>
+	<img src="screenshots/6.png" alt="Изображение 6">
+	<h2>7 задание</h2>
+	<img src="screenshots/7.png" alt="Изображение 7">
     </div>
 </body>
 </html>
